--- a/main-pages/about/index.html
+++ b/main-pages/about/index.html
@@ -1,1 +1,90 @@
-<!-- SHOWN IN NAVIGATION -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1869455728729943"
+     crossorigin="anonymous"></script>	
+<link rel="icon" type="image/jpg" href="../../assets/images/favicon.jpg">
+  
+	<meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Penguado - About</title>
+  <link rel="stylesheet" href="../assets/css/style.css">
+  <script src="../assets/js/script.js" defer></script>
+</head>
+<body>
+<!-- Nav Bar -->
+<div id="nav-placeholder"></div>
+
+<!-- Banner -->
+<header class="banner" style="height: 400px">
+  <div class="banner-overlay">
+    <h1 class="page-title">Penguado Profile</h1>
+    <div class="title-underline"></div>
+  </div>
+</header>
+
+<div class="divider"></div>
+
+   <!-- Indicator Bar -->
+<section class="content text-center">
+  <p style="margin-bottom: 10px;">Welcome to Penguado, where we take your browsing freedom and security seriously. In a world where online access is increasingly restricted, and personal privacy is at risk, our mission is to provide a seamless and safe online experience through our advanced web technologies. Whether you're seeking unrestricted access to websites, need a reliable way to access gaming platforms, or require a powerful video downloader and player for offline viewing, Penguado is your all-in-one solution. We prioritize privacy, ensuring that your data and activities remain secure, while also offering a simple, user-friendly interface that makes browsing easy and accessible for everyone. Our service is designed to work effortlessly across devices and platforms, so you can enjoy uninterrupted access to your favorite websites and services. Whether you're navigating educational resources, conducting professional research, or just enjoying some entertainment, Penguado enhances your productivity and leisure by ensuring a fast, reliable, and secure browsing experience. We understand that digital freedom is crucial in today’s connected world, and we're committed to giving you the tools you need to access the internet without restrictions. If you ever require assistance, our dedicated support team is always ready to help. You can always reach out to us at <a href="mailto:penguado.web@gmail.com" style="font-weight: bold; color: #00897b; text-decoration: none;">penguado.web@gmail.com</a> for any inquiries, technical support, or guidance.
+  <br><br>
+  At Penguado, we take your <strong>privacy, safety, and security</strong> to the highest level. We understand the importance of protecting your personal data and online activities, and we are committed to ensuring that your digital experience is completely safe. Our services are designed to protect you from cyber attacks, unauthorized tracking, and data theft, providing you with peace of mind while navigating the web. We employ advanced security measures to keep your computer and sensitive information secure, ensuring that you can browse freely without worrying about potential threats. Your privacy is our priority, and we strive to maintain a safe and secure digital environment for every user, every time.
+  </p>
+</section>
+
+<div class="divider"></div>
+
+<!-- Button Row #1: Navigation -->
+<div class="button-row">
+  <button style="width: 250px" class="button-outlined" onclick="window.location.href='./license.html'">License</button>
+  <button style="width: 250px" class="button-outlined" onclick="window.location.href='./privacy-policy/index.html'">Privacy Policy</button>
+  <button style="width: 250px" class="button-outlined" onclick="window.location.href='./terms-of-service/index.html'">Terms of Service</button>
+  <button style="width: 250px" class="button-outlined" onclick="window.location.href='./cookie-policy.html'">Cookie Policy</button>
+</div>
+
+<div class="divider"></div>
+
+<!-- Button Row #2: Help Support -->
+<div class="button-row">
+  <button style="width: 1020px" class="button-outlined" onclick="window.location.href='../../main-pages/support-us/index.html'">
+    Help Support Penguado — Minimal Ads, Maximum Speed
+  </button>
+</div>
+
+<div class="divider"></div>
+  	<iframe src="../embeds/cookie-policy.html" style="width: 100%; height: 100%; border: none; padding-bottom: 20px; padding-top: 20px;"></iframe>
+  
+
+<!-- Footer DO NOT EDIT -->
+<footer class="footer" style="padding-bottom: 100px;">
+  <div class="footer-content">
+    <div class="text-left">
+      <p style="font-size: 12px;">
+        © 2025 Penguado (https://penguado.top).<br>
+        All rights reserved. Unauthorized use of this code is prohibited. 
+        <a href="../about/license.html" style="font-weight: bold; color: #00897b; text-decoration: none;">View License</a><br><br>
+        We are working hard to improve your user experience.
+      </p>
+    </div>
+
+    <div class="text-right">
+      <p style="font-size: 12px;"><a href="https://docs.google.com/forms/d/e/1FAIpQLSflCjk3LJGbKFE3uZL41WD9VUDdDYfEPPXwhYnduLV0jhFifg/viewform?usp=header" style="font-weight: bold; color: #00897b; text-decoration: none;">Feedback</a></p>
+      <p style="font-size: 12px;"><a href="mailto:penguado.web@gmail.com" style="font-weight: bold; color: #00897b; text-decoration: none;">Contact us</a></p>
+      <p style="font-size: 12px;"><a href="../about/privacy-policy/index.html" style="font-weight: bold; color: #00897b; text-decoration: none;">Privacy Policy</a></p>
+      <p style="font-size: 12px;"><a href="../about/terms-of-service/index.html" style="font-weight: bold; color: #00897b; text-decoration: none;">Terms of Service</a></p>
+    </div>
+  </div>
+
+  <iframe src="../../embeds/heartbeat.html" style="width: 10px; height: 10px; border: none;"></iframe>
+</footer>
+</body>
+
+<script>
+  fetch("../../navigation.html")
+    .then(response => response.text())
+    .then(data => {
+      document.getElementById("nav-placeholder").innerHTML = data;
+    });
+</script>
+</html>
