--- a/main-pages/about/index.html
+++ b/main-pages/about/index.html
@@ -8,8 +8,8 @@
 	<meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Penguado - About</title>
-  <link rel="stylesheet" href="../assets/css/style.css">
-  <script src="../assets/js/script.js" defer></script>
+  <link rel="stylesheet" href="../../assets/css/style.css">
+  <script src="../../assets/js/script.js" defer></script>
 </head>
 <body>
 <!-- Nav Bar -->
@@ -53,7 +53,7 @@
 </div>
 
 <div class="divider"></div>
-  	<iframe src="../embeds/cookie-policy.html" style="width: 100%; height: 100%; border: none; padding-bottom: 20px; padding-top: 20px;"></iframe>
+  	<iframe src="../../embeds/cookie-policy.html" style="width: 100%; height: 100%; border: none; padding-bottom: 20px; padding-top: 20px;"></iframe>
   
 
 <!-- Footer DO NOT EDIT -->
@@ -63,7 +63,7 @@
       <p style="font-size: 12px;">
         © 2025 Penguado (https://penguado.top).<br>
         All rights reserved. Unauthorized use of this code is prohibited. 
-        <a href="../about/license.html" style="font-weight: bold; color: #00897b; text-decoration: none;">View License</a><br><br>
+        <a href="../../about/license.html" style="font-weight: bold; color: #00897b; text-decoration: none;">View License</a><br><br>
         We are working hard to improve your user experience.
       </p>
     </div>
@@ -71,8 +71,8 @@
     <div class="text-right">
       <p style="font-size: 12px;"><a href="https://docs.google.com/forms/d/e/1FAIpQLSflCjk3LJGbKFE3uZL41WD9VUDdDYfEPPXwhYnduLV0jhFifg/viewform?usp=header" style="font-weight: bold; color: #00897b; text-decoration: none;">Feedback</a></p>
       <p style="font-size: 12px;"><a href="mailto:penguado.web@gmail.com" style="font-weight: bold; color: #00897b; text-decoration: none;">Contact us</a></p>
-      <p style="font-size: 12px;"><a href="../about/privacy-policy/index.html" style="font-weight: bold; color: #00897b; text-decoration: none;">Privacy Policy</a></p>
-      <p style="font-size: 12px;"><a href="../about/terms-of-service/index.html" style="font-weight: bold; color: #00897b; text-decoration: none;">Terms of Service</a></p>
+      <p style="font-size: 12px;"><a href="../../about/privacy-policy/index.html" style="font-weight: bold; color: #00897b; text-decoration: none;">Privacy Policy</a></p>
+      <p style="font-size: 12px;"><a href="../../about/terms-of-service/index.html" style="font-weight: bold; color: #00897b; text-decoration: none;">Terms of Service</a></p>
     </div>
   </div>
 
