--- a/main-pages/about/index.html
+++ b/main-pages/about/index.html
@@ -18,7 +18,7 @@
 <!-- Banner -->
 <header class="banner" style="height: 400px">
   <div class="banner-overlay">
-    <h1 class="page-title">Penguado Profile</h1>
+    <h1 class="page-title">About</h1>
     <div class="title-underline"></div>
   </div>
 </header>
