--- a/main-pages/games.html
+++ b/main-pages/games.html
@@ -17,7 +17,7 @@
 <!-- Banner -->
 <header class="banner" style="height: 400px">
   <div class="banner-overlay">
-    <h1 class="page-title">Penguado Games</h1>
+    <h1 class="page-title">Games</h1>
     <div class="title-underline"></div>
   </div>
 </header>
