--- a/main-pages/video-player/index.html
+++ b/main-pages/video-player/index.html
@@ -17,7 +17,7 @@
 <!-- Banner -->
 <header class="banner" style="height: 400px">
   <div class="banner-overlay">
-    <h1 class="page-title">Penguado Video Player</h1>
+    <h1 class="page-title">Video Player</h1>
     <div class="title-underline"></div>
   </div>
 </header>
