--- a/main-pages/support-us/index.html
+++ b/main-pages/support-us/index.html
@@ -8,8 +8,8 @@
 	<meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Penguado - Support Us</title>
-  <link rel="stylesheet" href="assets/css/style.css">
-  <script src="assets/js/script.js" defer></script>
+  <link rel="stylesheet" href="../../assets/css/style.css">
+  <script src="../../assets/js/script.js" defer></script>
 </head>
 <body>
 <!-- Nav Bar -->
@@ -119,7 +119,7 @@ If you’re having trouble finding the right products, Penguado is the best plac
 	<button style="width: 320px" class="button-outlined" onclick="window.location.href='../../main-pages/video-player/index.html'">Videos</button>
 </div>
   
-<iframe src="../embeds/cookie-policy.html" style="width: 100%; height: 100%; border: none; padding-bottom: 20px; padding-top: 20px;"></iframe>
+<iframe src="../../embeds/cookie-policy.html" style="width: 100%; height: 100%; border: none; padding-bottom: 20px; padding-top: 20px;"></iframe>
 
   <!-- Footer DO NOT EDIT -->
   <footer class="footer" style="padding-bottom: 100px;">
@@ -143,14 +143,14 @@ If you’re having trouble finding the right products, Penguado is the best plac
         <p style="font-size: 12px;"><a href="https://docs.google.com/forms/d/e/1FAIpQLSflCjk3LJGbKFE3uZL41WD9VUDdDYfEPPXwhYnduLV0jhFifg/viewform?usp=header" style="font-weight: bold; color: #00897b; text-decoration: none;">Feedback</a></p>
         <p style="font-size: 12px;"><a href="mailto:penguado.web@gmail.com" style="font-weight: bold; color: #00897b; text-decoration: none;">Contact us</a></p>
         <p style="font-size: 12px;"><a href="https://docs.google.com/forms/d/e/1FAIpQLSfjMeVUaN9aUJFXR7wxBV1QmOhLHVsLB8gGAzo_gd9yxWBz6Q/viewform?usp=header" style="font-weight: bold; color: #00897b; text-decoration: none;">Report a bug</a></p>
-        <p style="font-size: 12px;"><a href="../main-pages/about/privacy-policy/index.html" style="font-weight: bold; color: #00897b; text-decoration: none;">Privacy Policy</a></p>
-        <p style="font-size: 12px;"><a href="../main-pages/about/terms-of-service/index.html" style="font-weight: bold; color: #00897b; text-decoration: none;">Terms of Service</a></p>
+        <p style="font-size: 12px;"><a href="../../main-pages/about/privacy-policy/index.html" style="font-weight: bold; color: #00897b; text-decoration: none;">Privacy Policy</a></p>
+        <p style="font-size: 12px;"><a href="../../main-pages/about/terms-of-service/index.html" style="font-weight: bold; color: #00897b; text-decoration: none;">Terms of Service</a></p>
 
         
       </div>
     </div>
 
-	<iframe src="../embeds/heartbeat.html" style="width: 10px; height: 10px; border: none;"></iframe>
+	<iframe src="../../embeds/heartbeat.html" style="width: 10px; height: 10px; border: none;"></iframe>
   </footer>
 
 </body>
