--- a/main-pages/support-us/index.html
+++ b/main-pages/support-us/index.html
@@ -156,7 +156,7 @@ If you’re having trouble finding the right products, Penguado is the best plac
 </body>
 
   <script>
-  fetch("navigation.html")
+  fetch("../../navigation.html")
     .then(response => response.text())
     .then(data => {
       document.getElementById("nav-placeholder").innerHTML = data;
