--- a/main-pages/support-us/index.html
+++ b/main-pages/support-us/index.html
@@ -90,26 +90,25 @@ We want to sincerely thank everyone who supports Penguado by using these affilia
 
 <div class="divider"></div>
   
-	<button style="width: 1020px" class="button-outlined" onclick="window.location.href='https://amzn.to/3FY9t8Z'">Universal Amazon Affiliate Link</button>
-	<button style="width: 1020px" class="button-outlined" onclick="window.location.href='./submit-product.html'">Submit a Product for Review, Addition, or Removal</button>
+	<div class="button-row"><button style="width: 1020px" class="button-outlined" onclick="window.location.href='https://amzn.to/3FY9t8Z'">Universal Amazon Affiliate Link</button> </div>
+	<div class="button-row"><button style="width: 1020px" class="button-outlined" onclick="window.location.href='./submit-product.html'">Submit a Product for Review, Addition, or Removal</button></div>
 	
 
 <div class="divider"></div>
-
-  <p class="penguado-text" style="text-align: center; font-family: 'Roboto', Arial, sans-serif; font-weight: bold; font-size: 1.125em;">
-Why Choose Penguado?
-      </p>
-  
-      <p class="penguado-text" style="text-align: center; font-family: 'Roboto', Arial, sans-serif;">
-If you’re having trouble finding the right products, Penguado is the best place to turn to! Our dedicated team spends countless hours researching and comparing items across many categories to bring you only the highest-quality and most reliable picks. We carefully select each product to ensure it delivers excellent value, performance, and satisfaction — saving you the hassle of endless searching. Whether you’re shopping for gaming gear, tech accessories, or everyday essentials, Penguado’s curated collection makes it easy to find exactly what you need. Trust us to be your go-to source for honest recommendations and the best affiliate deals available!  
-      </p>
+	
+<div class="content">
+	<secton>
+	  <p class="penguado-text" style="text-align: center; font-family: 'Roboto', Arial, sans-serif; font-weight: bold; font-size: 1.125em;">Why Choose Penguado?</p>
+	  <p class="penguado-text" style="text-align: center; font-family: 'Roboto', Arial, sans-serif;">If you’re having trouble finding the right products, Penguado is the best place to turn to! Our dedicated team spends countless hours researching and comparing items across many categories to bring you only the highest-quality and most reliable picks. We carefully select each product to ensure it delivers excellent value, performance, and satisfaction — saving you the hassle of endless searching. Whether you’re shopping for gaming gear, tech accessories, or everyday essentials, Penguado’s curated collection makes it easy to find exactly what you need. Trust us to be your go-to source for honest recommendations and the best affiliate deals available!  </p>	
+	</secton>
+</div>
 
 <div class="divider"></div>
   
-  <button style="width: 1020px" class="button-outlined" onclick="window.location.href='./best-gaming-products.html'">Best for Gaming</button>
-  <button style="width: 1020px" class="button-outlined" onclick="window.location.href='./best-work-products.html'">Best for Productivity</button>
-  <button style="width: 1020px" class="button-outlined" onclick="window.location.href='./best-accessories.html'">Best Accessories</button>
-  <button style="width: 1020px" class="button-outlined" onclick="window.location.href='./all-products.html'">View All Products</button>
+  <div class="button-row"><button style="width: 1020px" class="button-outlined" onclick="window.location.href='./best-gaming-products.html'">Best for Gaming</button></div>
+  <div class="button-row"><button style="width: 1020px" class="button-outlined" onclick="window.location.href='./best-work-products.html'">Best for Productivity</button></div>
+  <div class="button-row"><button style="width: 1020px" class="button-outlined" onclick="window.location.href='./best-accessories.html'">Best Accessories</button></div>
+  <div class="button-row"><button style="width: 1020px" class="button-outlined" onclick="window.location.href='./all-products.html'">View All Products</button></div>
 
 <div class="divider"></div>
 
