--- a/main-pages/login-signup/index.html
+++ b/main-pages/login-signup/index.html
@@ -57,43 +57,41 @@
 </main>
 	<div class="divider"></div>
 <main class="content">
-
   <section class="fade-in">
     <h3 style="font-weight: 600;">Why You Need to Sign Up on Penguado</h3>
     <p>To keep Penguado safe, secure, and personalized, creating an account is required. The system will not allow you to access the platform unless you sign up.</p>
 
     <h4 style="margin-top: 20px; font-weight: 600;">Here’s why signing up is important:</h4>
 
-	  <li style="margin-bottom: 15px;">
-        <strong>Security &amp; Privacy</strong><br>
-        By creating an account, you help us safeguard your personal information and protect the platform from unauthorized access. This verification process helps prevent spam, bots, and malicious users from interfering with your experience, ensuring a safer environment for everyone.
-      </li>
+    <div style="margin-bottom: 15px;">
+      <strong>Security &amp; Privacy</strong><br>
+      By creating an account, you help us safeguard your personal information and protect the platform from unauthorized access. This verification process helps prevent spam, bots, and malicious users from interfering with your experience, ensuring a safer environment for everyone.
+    </div>
 
-      <li style="margin-bottom: 15px;">
-        <strong>Full Access to Features</strong><br>
-        Penguado offers many powerful features and interactive tools that are only available to registered users. Signing up grants you full access to these capabilities, allowing you to participate fully, save your progress, and take advantage of everything the platform has to offer.
-      </li>
+    <div style="margin-bottom: 15px;">
+      <strong>Full Access to Features</strong><br>
+      Penguado offers many powerful features and interactive tools that are only available to registered users. Signing up grants you full access to these capabilities, allowing you to participate fully, save your progress, and take advantage of everything the platform has to offer.
+    </div>
 
-      <li style="margin-bottom: 15px;">
-        <strong>Personalized Experience</strong><br>
-        With an account, Penguado can tailor the platform to your preferences and interests. This means your settings, favorites, and activity history are saved, providing you with a seamless and customized experience every time you log in.
-      </li>
+    <div style="margin-bottom: 15px;">
+      <strong>Personalized Experience</strong><br>
+      With an account, Penguado can tailor the platform to your preferences and interests. This means your settings, favorites, and activity history are saved, providing you with a seamless and customized experience every time you log in.
+    </div>
 
-      <li style="margin-bottom: 15px;">
-        <strong>Compliance &amp; Accountability</strong><br>
-        Having verified user accounts allows Penguado to maintain compliance with security regulations and legal standards. It also helps us build a responsible community where users are accountable for their actions, which contributes to a more trustworthy and enjoyable environment.
-      </li>
+    <div style="margin-bottom: 15px;">
+      <strong>Compliance &amp; Accountability</strong><br>
+      Having verified user accounts allows Penguado to maintain compliance with security regulations and legal standards. It also helps us build a responsible community where users are accountable for their actions, which contributes to a more trustworthy and enjoyable environment.
+    </div>
 
-      <li style="margin-bottom: 15px;">
-        <strong>Support &amp; Updates</strong><br>
-        When you sign up, you’ll be able to receive important notifications about security alerts, new features, and other announcements. Additionally, having an account enables us to provide you with personalized customer support, addressing your needs more efficiently.
-      </li>
+    <div style="margin-bottom: 15px;">
+      <strong>Support &amp; Updates</strong><br>
+      When you sign up, you’ll be able to receive important notifications about security alerts, new features, and other announcements. Additionally, having an account enables us to provide you with personalized customer support, addressing your needs more efficiently.
+    </div>
 
     <p style="margin-top: 20px;">
       Simply put, signing up is necessary because the system will not let you proceed without an account, ensuring a secure and smooth experience for everyone.
     </p>
   </section>
-
 </main>
 
 <div class="divider"></div>
