--- a/main-pages/other/online-html-editor/index.html
+++ b/main-pages/other/online-html-editor/index.html
@@ -8,8 +8,8 @@
 	<meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Penguado - HTML Editor</title>
-  <link rel="stylesheet" href="../../assets/css/style.css">
-  <script src="../../assets/js/script.js" defer></script>
+  <link rel="stylesheet" href="../../../assets/css/style.css">
+  <script src="../../../assets/js/script.js" defer></script>
 </head>
 <body>
 <!-- Nav Bar -->
@@ -68,7 +68,7 @@
 <div><button style="width: 1020px" class="button-outlined" onclick="window.location.href='./retrieve-source.html'">Go to Retrieving the Source Code of a Game</button></div>
 
 <div class="divider"></div>
-  <iframe src="../../embeds/cookie-policy.html" style="width: 100%; height: 100%; border: none; padding-bottom: 20px; padding-top: 20px;"></iframe>
+  <iframe src="../../../../embeds/cookie-policy.html" style="width: 100%; height: 100%; border: none; padding-bottom: 20px; padding-top: 20px;"></iframe>
 
 <!-- Footer DO NOT EDIT -->
 <footer class="footer" style="padding-bottom: 100px;">
@@ -90,12 +90,12 @@
     </div>
   </div>
 
-  <iframe src="../../../embeds/heartbeat.html" style="width: 10px; height: 10px; border: none;"></iframe>
+  <iframe src="../../../../embeds/heartbeat.html" style="width: 10px; height: 10px; border: none;"></iframe>
 </footer>
 </body>
 
 <script>
-  fetch("../../../navigation.html")
+  fetch("../../../../navigation.html")
     .then(response => response.text())
     .then(data => {
       document.getElementById("nav-placeholder").innerHTML = data;
