--- a/main-pages/other/online-html-editor/index.html
+++ b/main-pages/other/online-html-editor/index.html
@@ -65,7 +65,7 @@
   <div class="divider"></div>
 
 <div class="button-row"><button style="width: 1020px" class="button-outlined" onclick="window.location.href='./add-penguado-game.html'">Go to Adding a Game to Penguado</button></div>
-<div class="button-row><button style="width: 1020px" class="button-outlined" onclick="window.location.href='./retrieve-source.html'">Go to Retrieving the Source Code of a Game</button></div>
+<div class="button-row"><button style="width: 1020px" class="button-outlined" onclick="window.location.href='./retrieve-source.html'">Go to Retrieving the Source Code of a Game</button></div>
 
 <div class="divider"></div>
   <iframe src="../../../../embeds/cookie-policy.html" style="width: 100%; height: 100%; border: none; padding-bottom: 20px; padding-top: 20px;"></iframe>
