--- a/main-pages/about/index.html
+++ b/main-pages/about/index.html
@@ -63,7 +63,7 @@
       <p style="font-size: 12px;">
         © 2025 Penguado (https://penguado.top).<br>
         All rights reserved. Unauthorized use of this code is prohibited. 
-        <a href="../../about/license.html" style="font-weight: bold; color: #00897b; text-decoration: none;">View License</a><br><br>
+        <a href="../../../about/license.html" style="font-weight: bold; color: #00897b; text-decoration: none;">View License</a><br><br>
         We are working hard to improve your user experience.
       </p>
     </div>
