--- a/main-pages/video-player/index.html
+++ b/main-pages/video-player/index.html
@@ -7,7 +7,7 @@
   
 	<meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Penguado - Games</title>
+  <title>Penguado - Video Player</title>
   <link rel="stylesheet" href="../../assets/css/style.css">
   <script src="../../assets/js/script.js" defer></script>
 </head>
