--- a/embeds/games/index.html
+++ b/embeds/games/index.html
@@ -502,7 +502,8 @@
         <button class="game-button" data-category="racing" onclick="embedWebsite('https://smash-kartsonline.github.io/g2/class-626')">Play Real Cars In City Official</button>
         <button class="game-button" data-category="sports" onclick="embedWebsite('https://smash-kartsonline.github.io/g/class-811')">Play Volley Random Official</button>
         <button class="game-button" data-category="platformer" onclick="embedWebsite('https://smash-kartsonline.github.io/g26/class-537')">Play Snow Rider 3D Official</button>
-        <button class="game-button" data-category="arcade" onclick="embedWebsite('https://onlinescientificresearch.com/games/coreball/')">Play Coreball Official</button>
+        <button class="game-button" data-category="arcade" onclick="embedWebsite('https://onlinescientificresearch.com/games/coreball/')">Play Coreball on OnlineScientificReasearch.com</button>
+        <button class="game-button" data-category="arcade" onclick="embedWebsite('https://arealme.com/coreball/en/')">Play Coreball Official</button>
         <button class="game-button" data-category="arcade" onclick="embedWebsite('https://polytrack-online.github.io/file/')">Play PolyTrack Official (v0.4.1)</button>
         <button class="game-button" data-category="arcade" onclick="embedWebsite('https://html-classic.itch.zone/html/14308892/index.html')">Play PolyTrack Official (0.5.1)</button>
             </div>
