--- a/AI/gpt/penguado-gpt-v1.html
+++ b/AI/gpt/penguado-gpt-v1.html
@@ -1,281 +1,121 @@
-
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
 <meta charset="utf-8">
-<title>Penguado AI – Client‑side Memory</title>
+<title>Penguado AI – GPT-5 Style</title>
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/marked/marked.min.css">
 <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
 
 <style>
-
-
-body {
-  font-family: 'Inter', -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
-  margin: 0;
-  padding: 1rem;
-  background: #fafafa;
-  transition: background 0.3s, color 0.3s;
-  color: #222;
-}
-body.dark {
-  background: #1e1e1e;
-  color: #e0e0e0;
-}
-
-h1 {
-  text-align: center;
-  margin: 1rem 0;
-  font-size: 1.8rem;
-  letter-spacing: -0.5px;
-}
-
-textarea {
-  width: 100%;
-  box-sizing: border-box;
-  padding: 0.6rem;
-  border: 1px solid #d4d4d4;
-  border-radius: 0.4rem;
-  font-size: 1rem;
-  background: #fff;
-  color: #222;
-  transition: border-color 0.2s;
-}
-.button-row {
-  display: flex;          /* aligns buttons in a row */
-  justify-content: center; /* centers the row horizontally */
-  align-items: center;    /* vertically aligns buttons if they have different heights */
-  gap: 1em;               /* space between buttons */
-  flex-wrap: wrap;        /* allows wrapping on smaller screens */
-  margin: 20px 0;         /* optional spacing above and below row */
-}
-
-textarea:focus {
-  border-color: #007bff;
-  outline: none;
-}
-body.dark textarea { background: #2b2b2b; color: #e0e0e0; }
-
-.switch {
-  display: flex;
-  align-items: center;
-  margin: 0.4rem 0;
-}
-.switch input {
-  margin-right: 0.4rem;
-  transform: scale(1.2);
-}
-.switch label {
-  font-weight: 500;
-  cursor: pointer;
-}
-
-button {
-  padding: 0.6rem 1.2rem;
-  background: #007bff;
-  color: #fff;
-  border: none;
-  border-radius: 0.3rem;
-  font-weight: 600;
-  cursor: pointer;
-  transition: background 0.2s;
-}
-button:hover { background: #0069d9; }
-button:disabled { background: #bbb; cursor: not-allowed; }
-
-#spinner {
-  display: none;
-  margin-left: 0.6rem;
-}
-.spinner {
-  width: 22px; height: 22px;
-  border: 3px solid #d3d3d3;
-  border-top: 3px solid #007bff;
-  border-radius: 50%;
-  animation: spin 0.9s linear infinite;
-}
-@keyframes spin { to { transform: rotate(360deg); } }
-
-#output {
-  background: #fff;
-  border: 1px solid #e0e0e0;
-  border-radius: 0.4rem;
-  padding: 0.8rem;
-  margin-top: 1rem;
-  max-height: 420px;
-  overflow-y: auto;
-  font-size: 0.95rem;
-  line-height: 1.4;
-  position: relative;
-  box-shadow: 0 2px 8px rgba(0,0,0,0.1);
-}
-body.dark #output {
-  background: #2b2b2b;
-  border-color: #444;
-  color: #e0e0e0;
-}
-
-.interaction {
-  margin-bottom: 1.2rem;
-}
-
-.user-txt {
-  background: #e7f0ff;
-  border-left: 4px solid #007bff;
-  padding: 0.6rem;
-  border-radius: 0.25rem;
-  margin-bottom: 0.4rem;
-}
-body.dark .user-txt {
-  background: #274c77;
-  border-color: #5aa1ff;
-}
-
-hr {
-  border: none;
-  border-top: 1px solid #e0e0e0;
-  margin: 0.6rem 0;
-}
-body.dark hr { border-color: #444; }
-
-.assistant-txt {
-  background: #fff;
-  border-radius: 0.25rem;
-  padding: 0.6rem;
-  animation: fadeIn 0.4s ease-out;
-}
-body.dark .assistant-txt { background: #3c3c3c; color: #e0e0e0; }
-
-@keyframes fadeIn {
-  from { opacity: 0; }
-  to   { opacity: 1; }
-}
-
-/* ---------- Responsive tweak ---------- */
-@media (max-width: 480px) {
-  textarea { font-size: 0.95rem; }
-  button { width: 100%; margin-top: 0.4rem; }
-  .switch { flex-wrap: wrap; }
-  .switch label { margin-left: 0.4rem; }
-}
+:root{--penguado-blue:#0078ff;--penguado-blue-hover:#0060cc;--bg:#f3f6fb;--surface:rgba(255,255,255,0.9);
+--border:#e1e4e8;--text:#1a1b1d;--subtext:#5c5c5c;--radius:1rem;--shadow:0 4px 20px rgba(0,0,0,0.08);}
+body.dark{--bg:#0e1116;--surface:rgba(35,37,42,0.9);--border:#2e3238;--text:#e9e9ea;--subtext:#b3b3b3;--shadow:0 4px 20px rgba(0,0,0,0.5);}
+body{margin:0;font-family:"Inter",system-ui,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
+background:var(--bg);color:var(--text);display:flex;flex-direction:column;height:100vh;transition:background .3s,color .3s;}
+header{backdrop-filter:blur(12px);background:var(--surface);border-bottom:1px solid var(--border);box-shadow:var(--shadow);
+padding:.9rem 1.4rem;display:flex;align-items:center;justify-content:space-between;position:sticky;top:0;z-index:10;}
+header h1{margin:0;font-size:1.2rem;font-weight:600;color:var(--penguado-blue);letter-spacing:-0.01em;}
+.toggle{cursor:pointer;font-size:.9rem;color:var(--subtext);user-select:none;transition:color .2s;}
+.toggle:hover{color:var(--penguado-blue);}
+#output{flex:1;overflow-y:auto;padding:1.5rem;display:flex;flex-direction:column;gap:1rem;scroll-behavior:smooth;}
+.chat{display:flex;align-items:flex-start;gap:.8rem;max-width:720px;}
+.chat.user{align-self:flex-end;flex-direction:row-reverse;}
+.bubble{background:var(--surface);border:1px solid var(--border);padding:.85rem 1rem;border-radius:var(--radius);
+box-shadow:var(--shadow);max-width:85%;font-size:.97rem;line-height:1.5;animation:fadeIn .25s ease-out;}
+.user .bubble{background:var(--penguado-blue);color:#fff;border:none;}
+.avatar{width:34px;height:34px;border-radius:50%;background:var(--border);display:flex;align-items:center;justify-content:center;
+font-weight:700;color:var(--subtext);font-size:.8rem;}
+.user .avatar{background:var(--penguado-blue);color:#fff;}
+@keyframes fadeIn{from{opacity:0;transform:translateY(6px);}to{opacity:1;transform:translateY(0);}}
+footer{backdrop-filter:blur(12px);background:var(--surface);border-top:1px solid var(--border);
+box-shadow:0 -2px 8px rgba(0,0,0,0.04);padding:1rem 1.5rem;}
+form{display:flex;gap:.8rem;align-items:center;max-width:760px;margin:auto;}
+textarea{flex:1;resize:none;font-size:1rem;padding:.8rem 1rem;border-radius:var(--radius);
+border:1px solid var(--border);background:var(--bg);color:var(--text);transition:border-color .2s,background .2s;}
+textarea:focus{border-color:var(--penguado-blue);outline:none;}
+button{background:var(--penguado-blue);color:#fff;font-weight:600;border:none;padding:.8rem 1.3rem;
+border-radius:var(--radius);cursor:pointer;transition:background .2s;}
+button:hover{background:var(--penguado-blue-hover);}
+button:disabled{background:#999;cursor:not-allowed;}
+.bubble pre{background:rgba(0,0,0,0.05);padding:.6rem;border-radius:.5rem;
+overflow-x:auto;font-family:monospace;font-size:.9rem;}
+body.dark .bubble pre{background:rgba(255,255,255,0.08);}
+.bubble code{background:rgba(0,0,0,0.05);padding:.15rem .3rem;border-radius:0.3rem;}
+body.dark .bubble code{background:rgba(255,255,255,0.1);}
 </style>
 </head>
 <body>
-
-<h1>Penguado AI</h1>
-
-<form id="chatForm">
-  <label for="prompt">Your prompt:</label><br>
-  <textarea id="prompt" placeholder="Type your prompt here…"></textarea>
-
-  <div class="button-row"> 
-    <div class="switch"><input type="checkbox" id="search_web"><label for="search_web">Search web</label></div>
-    <div class="switch"><input type="checkbox" id="functions_image"><label for="functions_image">Functions image</label></div>
-    <div class="switch"><input type="checkbox" id="interactive_app"><label for="interactive_app">Interactive app</label></div>
-    <div class="switch"><input type="checkbox" id="landing_page"><label for="landing_page">Landing page</label></div>
-    <div class="switch"><input type="checkbox" id="game2d"><label for="game2d">2D game</label></div>
-    <div class="switch"><input type="checkbox" id="game3d"><label for="game3d">3D game</label></div>
-    <button type="submit">Send ➤</button>
-    <span id="spinner"><div class="spinner"></div></span>
-  </div>
-</form>
+<header>
+  <h1>Penguado AI</h1>
+  <div class="toggle" id="themeToggle">Dark Mode</div>
+</header>
 
 <div id="output"></div>
 
+<footer>
+  <form id="chatForm">
+    <textarea id="prompt" rows="2" placeholder="Ask Penguado something..."></textarea>
+    <button type="submit">Send ➤</button>
+  </form>
+</footer>
+
 <script>
-/* -------------------  CONFIG & HELPERS  --------------------- */
-const API_KEY = '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';   // ← replace with your key
+const API_KEY = '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';
+const output = document.getElementById('output');
 
-const MAX_HISTORY = 20;          // maximum number of messages stored
-const STORAGE_KEY = 'penguado_history'; // localStorage key
-
-function loadHistory() {
-  const json = localStorage.getItem(STORAGE_KEY);
-  return json ? JSON.parse(json) : [];
-}
-function saveHistory(history) { localStorage.setItem(STORAGE_KEY, JSON.stringify(history)); }
-
-// escape for display
-function escapeHtml(str) {
-  return str.replace(/&/g,'&amp;').replace(/</g,'&lt;').replace(/>/g,'&gt;');
+/* Append chat message */
+function addMessage(role, content){
+  const div=document.createElement('div');
+  div.className=`chat ${role}`;
+  const avatar=`<div class="avatar">${role==='user'?'U':'AI'}</div>`;
+  const bubble=`<div class="bubble">${marked.parse(content)}</div>`;
+  div.innerHTML=avatar + bubble;
+  output.appendChild(div);
+  output.scrollTop=output.scrollHeight;
 }
 
-/* ---------------------------------  MAIN  --------------------------------- */
-document.getElementById('chatForm').onsubmit = async (e) => {
+/* Theme toggle */
+document.getElementById('themeToggle').onclick=()=>{
+  document.body.classList.toggle('dark');
+  const dark=document.body.classList.contains('dark');
+  document.getElementById('themeToggle').innerText=dark?'Light Mode':'Dark Mode';
+};
+
+/* Chat logic (no local storage, no loading overlay) */
+document.getElementById('chatForm').onsubmit = async (e)=>{
   e.preventDefault();
+  const prompt=document.getElementById('prompt').value.trim();
+  if(!prompt) return;
+  addMessage('user', prompt);
+  document.getElementById('prompt').value='';
 
-  const promptText = document.getElementById('prompt').value.trim();
-  if (!promptText) return;
+  const messages=[
+    {role:'system',content:'You are Penguado AI, a helpful, calm, and precise assistant.'},
+    {role:'user',content:prompt}
+  ];
 
-  const spinner = document.getElementById('spinner');
-  spinner.style.display = 'inline';
-
-  // 1️⃣ Load past history
-  const history = loadHistory();          // array of {role, content}
-
-  // 2️⃣ Build messages array that goes to OpenRouter
-  const systemMessage = {
-    role: 'system',
-    content: 'You are a helpful AI assistant. Remember the chat history but do NOT reveal it to the user.'
-  };
-  const allMessages = [systemMessage, ...history, { role: 'user', content: promptText }];
-
-  // 3️⃣ Send request
-  try {
-    const resp = await fetch('https://openrouter.ai/api/v1/chat/completions', {
-      method: 'POST',
-      headers: { 'Content-Type': 'application/json', 'Authorization': `Bearer ${API_KEY}` },
-      body: JSON.stringify({
-        model: 'openai/gpt-oss-20b:free',
-        messages: allMessages,
-        temperature: 1.0,
-        search_web:      document.getElementById('search_web').checked,
-        functions_image: document.getElementById('functions_image').checked,
-        interactive_app: document.getElementById('interactive_app').checked,
-        landing_page:    document.getElementById('landing_page').checked,
-        game2d:          document.getElementById('game2d').checked,
-        game3d:          document.getElementById('game3d').checked
+  try{
+    const resp=await fetch('https://openrouter.ai/api/v1/chat/completions',{
+      method:'POST',
+      headers:{
+        'Content-Type':'application/json',
+        'Authorization':`Bearer ${API_KEY}`
+      },
+      body:JSON.stringify({
+        model:'openai/gpt-oss-20b:free',
+        messages,
+        temperature:1.0
       })
     });
 
-    const data = await resp.json();
-    if (!resp.ok) throw new Error(JSON.stringify(data, null, 2));
-
-    // 4️⃣ Append assistant reply to the UI
-    const assistantMessage = data?.choices?.[0]?.message?.content ?? '';
-    const replyHtml = `<div class="assistant-txt">${marked.parse(assistantMessage, { breaks: true, gfm: true })}</div>`;
-    const interactionHtml = `
-      <div class="interaction">
-        <div class="user-txt">${escapeHtml(promptText)}</div>
-        <hr>
-        ${replyHtml}
-      </div>`;
-    document.getElementById('output').innerHTML += interactionHtml;
-    document.getElementById('output').scrollTop = document.getElementById('output').scrollHeight;
-
-    // 5️⃣ Update stored history (keep only most recent TOTAL messages)
-    const newEntry = [
-      { role: 'user', content: promptText },
-      { role: 'assistant', content: assistantMessage }
-    ];
-    const updatedHistory = [...history, ...newEntry];
-    if (updatedHistory.length > MAX_HISTORY) {
-      // keep the newest MAX_HISTORY messages
-      updatedHistory.splice(0, updatedHistory.length - MAX_HISTORY);
-    }
-    saveHistory(updatedHistory);
-
-    // clear prompt for next turn
-    document.getElementById('prompt').value = '';
-
-  } catch (err) {
-    alert('❌ ' + err.message);
-  } finally {
-    spinner.style.display = 'none';
+    const data=await resp.json();
+    if(!resp.ok) throw new Error(JSON.stringify(data,null,2));
+    const reply=data?.choices?.[0]?.message?.content||"";
+    addMessage('assistant', reply);
+  }catch(err){
+    addMessage('assistant', `Error: ${err.message}`);
   }
 };
 </script>
-
 </body>
 </html>
