--- a/AI/gpt/penguado-gpt-v1.html
+++ b/AI/gpt/penguado-gpt-v1.html
@@ -60,7 +60,7 @@ body.dark .bubble code{background:rgba(255,255,255,0.1);}
 </footer>
 
 <script>
-const API_KEY = #{{API_KEY}};
+const API_KEY = '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';
 const output = document.getElementById('output');
 
 /* Append chat message */
