--- a/main-pages/login-signup/login.html
+++ b/main-pages/login-signup/login.html
@@ -18,7 +18,7 @@
 <!-- Nav Bar -->
   <div id="nav-placeholder"></div>
 
-<iframe src="../../embeds/login.html" style="width: 100%; height: 100%; border: none; padding-bottom: 20px; padding-top: 20px;"></iframe>
+<iframe src="../../embeds/login.html" style="width: 100%; height: 1000px; border: none; padding-bottom: 20px; padding-top: 20px;"></iframe>
 
   <!-- Footer DO NOT EDIT -->
   <footer class="footer" style="padding-bottom: 100px;">
