--- a/main-pages/about/cookie-policy.html
+++ b/main-pages/about/cookie-policy.html
@@ -21,10 +21,11 @@
     <h1 class="page-title">About</h1>
     <div class="title-underline"></div>
   </div>
-</header>
+</header
 
 <div class="divider"></div>
 
+<main class="content">
  <p class="penguado-text" style="text-align: left; font-family: 'Roboto', Arial, sans-serif; font-weight: bold; font-size: 1.125em;">Penguado Cookie Policy</p> 
  <p class="penguado-text" style="text-align: left; font-family: 'Roboto', Arial, sans-serif;">Effective Date: August 10, 2025<br>Last Updated: October 31, 2025<br><br>This Cookie Policy explains how Penguado (“we,” “our,” “us”) uses cookies and similar technologies when you visit or use our website and services.</p>
  <p class="penguado-text" style="text-align: left; font-family: 'Roboto', Arial, sans-serif; font-weight: bold; font-size: 1.125em;"><br>1. What Are Cookies?</p> 
@@ -54,7 +55,7 @@
   <div class="button-row">
   <button style="width: 330px" class="button-outlined" onclick="window.location.href='./index.html'">Return to About</button>
   <button style="width: 330px" class="button-outlined" onclick="window.location.href='./privacy-policy/index.html'">Go to Privacy Policy</button>
-  <button style="width: 330px" class="button-outlined" onclick="window.location.href='./termos-of-service/index.html'">Go to Terms of Service</button>
+  <button style="width: 330px" class="button-outlined" onclick="window.location.href='./terms-of-service/index.html'">Go to Terms of Service</button>
 
 </div>
   
@@ -66,7 +67,8 @@
 
 <div class="divider"></div>
   	<iframe src="../../embeds/cookie-policy.html" style="width: 100%; height: 100%; border: none; padding-bottom: 20px; padding-top: 20px;"></iframe>
-  
+
+</main>
 
 <!-- Footer DO NOT EDIT -->
 <footer class="footer" style="padding-bottom: 100px;">
