Fix header closing tag in cookie policy page

--- a/main-pages/about/cookie-policy.html
+++ b/main-pages/about/cookie-policy.html
@@ -21,7 +21,7 @@
     <h1 class="page-title">About</h1>
     <div class="title-underline"></div>
   </div>
-</header
+</header>
 
 <div class="divider"></div>
 <main class="content">
