--- a/main-pages/about/privacy-policy/index.html
+++ b/main-pages/about/privacy-policy/index.html
@@ -8,7 +8,7 @@
 	<meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Penguado - Privacy Policy</title>
-  <link rel="stylesheet" href="../../assets/css/style.css">
+  <link rel="stylesheet" href="../../../assets/css/style.css">
   <script src="../../../assets/js/script.js" defer></script>
 </head>
 <body>
