Add full Terms of Service page
Added the complete Terms of Service for Penguado, including user conduct, intellectual property rights, and liability limitations.

--- a/main-pages/about/terms-of-service/index.html
+++ b/main-pages/about/terms-of-service/index.html
@@ -1,1 +1,191 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1869455728729943"
+     crossorigin="anonymous"></script>	
+<link rel="icon" type="image/jpg" href="../../../assets/images/favicon.jpg">
+  
+	<meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Penguado - Terms of Service</title>
+  <link rel="stylesheet" href="../../../assets/css/style.css">
+  <script src="../../../assets/js/script.js" defer></script>
+</head>
+<body>
+<!-- Nav Bar -->
+<div id="nav-placeholder"></div>
 
+<!-- Banner -->
+<header class="banner" style="height: 400px">
+  <div class="banner-overlay">
+    <h1 class="page-title">Terms of Service</h1>
+    <div class="title-underline"></div>
+  </div>
+</header>
+
+<div class="divider"></div>
+<div class="content">
+	<p class="penguado-text" style="text-align: center; font-family: 'Roboto', Arial, sans-serif;">To make things clear for everyone, Penguado provides a straightforward, easy-to-read Terms of Service so all users can understand exactly what they’re agreeing to. You can view our full Terms of Service below for a more detailed explanation of how our website operates.</p>
+	<div class="button-row"><button style="width: 1020px" class="button-outlined" onclick="window.location.href='./full-terms-of-service.html'">Click for Full Terms of Service</button></div>
+</div>	
+<div class="divider"></div>	
+	
+<main class="content">
+ <p class="penguado-text" style="text-align: left; font-family: 'Roboto', Arial, sans-serif; font-weight: bold; font-size: 1.125em;">
+  Penguado Terms of Service
+</p>
+
+<p class="penguado-text" style="text-align: left; font-family: 'Roboto', Arial, sans-serif;">
+  Effective Date: 7 June 2025<br>
+  Last Updated: 17 August 2025<br><br>
+  By using Penguado’s services, you agree to the following Terms and Conditions. If you do not agree, you must stop using our services immediately.
+</p>
+
+<p class="penguado-text" style="text-align: left; font-family: 'Roboto', Arial, sans-serif; font-weight: bold; font-size: 1.125em;">
+  <br>1. Acceptance of Terms
+</p>
+<p class="penguado-text" style="text-align: left; font-family: 'Roboto', Arial, sans-serif;">
+  By accessing or using Penguado’s website, applications, or services, you acknowledge that you have read, understood, and agree to be bound by these Terms of Service, as well as our Privacy Policy and License. These terms apply to all users, regardless of age or location.
+</p>
+
+<p class="penguado-text" style="text-align: left; font-family: 'Roboto', Arial, sans-serif; font-weight: bold; font-size: 1.125em;">
+  <br>2. Use of Services
+</p>
+<p class="penguado-text" style="text-align: left; font-family: 'Roboto', Arial, sans-serif;">
+  Penguado’s proxy technology, games unblocker, and video downloader/player are provided for lawful purposes only.<br>
+  You are solely responsible for ensuring your use of our services complies with all applicable laws, including copyright, intellectual property, and content restrictions.
+</p>
+<p class="penguado-text" style="text-align: left; font-family: 'Roboto', Arial, sans-serif;">
+  You may not:
+</p>
+<ul class="penguado-text" style="text-align: left; font-family: 'Roboto', Arial, sans-serif;">
+  <li>Engage in illegal activities of any kind</li>
+  <li>Infringe on the rights of others, including copyright and trademark rights</li>
+  <li>Upload, transmit, or distribute malware, spyware, or other harmful code</li>
+  <li>Attempt to bypass, disable, or interfere with security measures</li>
+  <li>Attempt to overload, disrupt, or damage Penguado’s systems or infrastructure</li>
+  <li>Use Penguado to harass, threaten, stalk, or harm others</li>
+  <li>Use automated bots, scrapers, or crawlers without written permission</li>
+  <li>Misrepresent your identity or affiliation with any person or entity</li>
+  <li>Circumvent any content restrictions set by Penguado</li>
+</ul>
+<p class="penguado-text" style="text-align: left; font-family: 'Roboto', Arial, sans-serif;">
+  Rules still apply even if not explicitly listed here. Penguado reserves the right to determine what constitutes prohibited conduct.
+</p>
+
+<p class="penguado-text" style="text-align: left; font-family: 'Roboto', Arial, sans-serif; font-weight: bold; font-size: 1.125em;">
+  <br>3. User Conduct, Management, and Privacy
+</p>
+<p class="penguado-text" style="text-align: left; font-family: 'Roboto', Arial, sans-serif;">
+  Penguado may monitor, manage, or restrict access to ensure all activity complies with these Terms and applicable laws.<br>
+  We may remove accounts, block features, or take other measures to maintain a safe and respectful environment.<br><br>
+  Cookies are used only to maintain secure sessions and not for tracking purposes.
+</p>
+
+<p class="penguado-text" style="text-align: left; font-family: 'Roboto', Arial, sans-serif; font-weight: bold; font-size: 1.125em;">
+  <br>4. No Minimum Age Requirement
+</p>
+<p class="penguado-text" style="text-align: left; font-family: 'Roboto', Arial, sans-serif;">
+  Penguado imposes no minimum age requirement. Our advanced privacy and safety measures are designed to protect all users. Parents or guardians are welcome to supervise younger users, but such supervision is not required.
+</p>
+
+<p class="penguado-text" style="text-align: left; font-family: 'Roboto', Arial, sans-serif; font-weight: bold; font-size: 1.125em;">
+  <br>5. Intellectual Property Rights
+</p>
+<p class="penguado-text" style="text-align: left; font-family: 'Roboto', Arial, sans-serif;">
+  All content, code, software, logos, branding, and other intellectual property on Penguado are owned by or licensed to Penguado and are protected by copyright, trademark, and intellectual property laws.<br><br>
+  You may not copy, modify, distribute, publicly display, reverse-engineer, or create derivative works from any part of Penguado without our prior written permission.<br><br>
+  All use of Penguado’s code and services is further governed by the Penguado License, which is incorporated by reference into these Terms.
+</p>
+
+<p class="penguado-text" style="text-align: left; font-family: 'Roboto', Arial, sans-serif; font-weight: bold; font-size: 1.125em;">
+  <br>6. Limitation of Liability
+</p>
+<p class="penguado-text" style="text-align: left; font-family: 'Roboto', Arial, sans-serif;">
+  Penguado is not responsible for misuse of its services by any user.<br>
+  We make no guarantee that our services will be uninterrupted, error-free, or free from harmful components.<br>
+  Your use of Penguado is at your own risk. To the fullest extent permitted by law, Penguado shall not be liable for any direct, indirect, incidental, or consequential damages resulting from your use of our services.
+</p>
+
+<p class="penguado-text" style="text-align: left; font-family: 'Roboto', Arial, sans-serif; font-weight: bold; font-size: 1.125em;">
+  <br>7. Termination
+</p>
+<p class="penguado-text" style="text-align: left; font-family: 'Roboto', Arial, sans-serif;">
+  Penguado reserves the right to suspend, restrict, or terminate accounts and access to services at our sole discretion, with or without notice, for violations of these Terms, unlawful activity, or abuse of our platform.
+</p>
+
+<p class="penguado-text" style="text-align: left; font-family: 'Roboto', Arial, sans-serif; font-weight: bold; font-size: 1.125em;">
+  <br>8. Governing Law and Jurisdiction
+</p>
+<p class="penguado-text" style="text-align: left; font-family: 'Roboto', Arial, sans-serif;">
+  These Terms are governed by the laws of the United States and the Commonwealth of Massachusetts.<br>
+  Any disputes will be resolved exclusively in the courts located in Westford, Massachusetts, USA.
+</p>
+
+<p class="penguado-text" style="text-align: left; font-family: 'Roboto', Arial, sans-serif; font-weight: bold; font-size: 1.125em;">
+  <br>9. Changes to These Terms
+</p>
+<p class="penguado-text" style="text-align: left; font-family: 'Roboto', Arial, sans-serif;">
+  We may update these Terms of Service at any time. Updates will be posted on this page with a new “Last Updated” date.<br>
+  Continued use of Penguado after changes are posted constitutes acceptance of the revised Terms.
+</p>
+
+<p class="penguado-text" style="text-align: left; font-family: 'Roboto', Arial, sans-serif; font-weight: bold; font-size: 1.125em;">
+  <br>Contact Us
+</p>
+<p class="penguado-text" style="text-align: left; font-family: 'Roboto', Arial, sans-serif;">
+  If you have questions about these Terms of Service, email us at
+  <a href="mailto:penguado.web@gmail.com" style="font-weight: bold; color: #00897b; text-decoration: none;">penguado.web@gmail.com</a>.
+</p>
+</main>
+
+ <div class="divider"></div>
+  <div class="button-row">
+  <button style="width: 330px" class="button-outlined" onclick="window.location.href='../index.html'">Return to About</button>
+  <button style="width: 330px" class="button-outlined" onclick="window.location.href='../cookie-policy.html'">Go to Cookie Policy</button>
+  <button style="width: 330px" class="button-outlined" onclick="window.location.href='../privacy-policy/index.html'">Go to Privacy Policy</button>
+
+</div>
+  
+<div class="button-row">
+  <button style="width: 1020px" class="button-outlined" onclick="window.location.href='../../../../main-pages/support-us/index.html'">
+    Help Support Penguado — Minimal Ads, Maximum Speed
+  </button>
+</div>
+
+<div class="divider"></div>
+  	<iframe src="../../../embeds/cookie-policy.html" style="width: 100%; height: 100%; border: none; padding-bottom: 20px; padding-top: 20px;"></iframe>
+
+
+<!-- Footer DO NOT EDIT -->
+<footer class="footer" style="padding-bottom: 100px;">
+  <div class="footer-content">
+    <div class="text-left">
+      <p style="font-size: 12px;">
+        © 2025 Penguado (https://penguado.top).<br>
+        All rights reserved. Unauthorized use of this code is prohibited. 
+        <a href="../../../../about/license.html" style="font-weight: bold; color: #00897b; text-decoration: none;">View License</a><br><br>
+        We are working hard to improve your user experience.
+      </p>
+    </div>
+
+    <div class="text-right">
+      <p style="font-size: 12px;"><a href="https://docs.google.com/forms/d/e/1FAIpQLSflCjk3LJGbKFE3uZL41WD9VUDdDYfEPPXwhYnduLV0jhFifg/viewform?usp=header" style="font-weight: bold; color: #00897b; text-decoration: none;">Feedback</a></p>
+      <p style="font-size: 12px;"><a href="mailto:penguado.web@gmail.com" style="font-weight: bold; color: #00897b; text-decoration: none;">Contact us</a></p>
+      <p style="font-size: 12px;"><a href="../../../about/privacy-policy/index.html" style="font-weight: bold; color: #00897b; text-decoration: none;">Privacy Policy</a></p>
+      <p style="font-size: 12px;"><a href="../../../about/terms-of-service/index.html" style="font-weight: bold; color: #00897b; text-decoration: none;">Terms of Service</a></p>
+    </div>
+  </div>
+
+  <iframe src="../../../embeds/heartbeat.html" style="width: 10px; height: 10px; border: none;"></iframe>
+</footer>
+</body>
+
+<script>
+  fetch("../../../navigation.html")
+    .then(response => response.text())
+    .then(data => {
+      document.getElementById("nav-placeholder").innerHTML = data;
+    });
+</script>
+</html>
